style: 💄 fix badge popup text overflowing

--- a/src/app/widgets/elements/badge-popup/badge-popup.component.scss
+++ b/src/app/widgets/elements/badge-popup/badge-popup.component.scss
@@ -39,6 +39,14 @@
   border-bottom-width: 6px;
   border-right-width: 3px;
   height: 120px;
-  width: 390px;
+  min-width: 390px;
+  max-width: 70vw;
   border-radius: 5px;
+  padding: 0 0.5rem;
+  > p {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    line-height: 70px;
+  }
 }
